@@ -4,6 +4,7 @@ Core
 * [Makefile] Support for GNU make < 4 is fixed; BSD make dropped (#9387)
 
 Extractors
+* [allocine] Fix extraction (#10860)
 + [nextmedia] Recognize action news on AppleDaily
 
 
